{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 13,
  "lineage": "1f144f63-31bc-db3a-017e-057f760c47d3",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0179b1ff66891f1f2",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-81-59-161.us-west-2.compute.amazonaws.com",
            "public_ip": "35.81.59.161",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "Name": "main-us-west-2a"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main-us-west-2a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:739985787445:internet-gateway/igw-0775b01cc829a0ab9",
            "id": "igw-0775b01cc829a0ab9",
            "owner_id": "739985787445",
            "tags": {
              "Environment": "staging",
              "Name": "main"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main"
            },
            "vpc_id": "vpc-065f739baf9ecbf14"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0179b1ff66891f1f2",
            "id": "nat-067c49e03db0769b0",
            "network_interface_id": "eni-04d6e7ff44c44dba1",
            "private_ip": "10.0.0.71",
            "public_ip": "35.81.59.161",
            "subnet_id": "subnet-097ccf11f34011a59",
            "tags": {
              "Environment": "staging",
              "Name": "main-us-west-2a"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main-us-west-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c875de76faf779321080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-067c49e03db0769b0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c875de76faf77932",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0775b01cc829a0ab9",
            "id": "r-rtb-03e466aa63300feef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e466aa63300feef",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:739985787445:route-table/rtb-0c875de76faf77932",
            "id": "rtb-0c875de76faf77932",
            "owner_id": "739985787445",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "staging",
              "Name": "main-private-us-west-2a"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main-private-us-west-2a"
            },
            "vpc_id": "vpc-065f739baf9ecbf14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:739985787445:route-table/rtb-03e466aa63300feef",
            "id": "rtb-03e466aa63300feef",
            "owner_id": "739985787445",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "staging",
              "Name": "main-public"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main-public"
            },
            "vpc_id": "vpc-065f739baf9ecbf14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b08fda828eeae5e3",
            "route_table_id": "rtb-0c875de76faf77932",
            "subnet_id": "subnet-061c959febb8951f7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8b1bfdba3f3da5d",
            "route_table_id": "rtb-03e466aa63300feef",
            "subnet_id": "subnet-097ccf11f34011a59"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:739985787445:subnet/subnet-061c959febb8951f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-061c959febb8951f7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739985787445",
            "tags": {
              "Environment": "staging",
              "Name": "main-private-us-west-2a"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main-private-us-west-2a"
            },
            "vpc_id": "vpc-065f739baf9ecbf14"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:739985787445:subnet/subnet-097ccf11f34011a59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-097ccf11f34011a59",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "739985787445",
            "tags": {
              "Environment": "staging",
              "Name": "main-public-us-west-2a"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main-public-us-west-2a"
            },
            "vpc_id": "vpc-065f739baf9ecbf14"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:739985787445:vpc/vpc-065f739baf9ecbf14",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0afd92dc4d2993621",
            "default_route_table_id": "rtb-0adb4148e3e31e8b3",
            "default_security_group_id": "sg-0fd028838f5a4c526",
            "dhcp_options_id": "dopt-195b0161",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-065f739baf9ecbf14",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0adb4148e3e31e8b3",
            "owner_id": "739985787445",
            "tags": {
              "Environment": "staging",
              "Name": "main"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}